host/js-bindgen/tests/ui/string_arguments.stderr
error: requires at least a string argument
 --> tests/ui/string_arguments.rs:1:1
  |
1 | js_bindgen::unsafe_embed_asm!();
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `js_bindgen::unsafe_embed_asm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: requires at least a string argument
 --> tests/ui/string_arguments.rs:4:31
  |
4 | js_bindgen::unsafe_embed_asm!(42);
  |                               ^^

error: escaping `r` is not supported
 --> tests/ui/string_arguments.rs:7:35
  |
7 | js_bindgen::unsafe_embed_asm!("", "\r");
  |                                   ^^^^

error: expected a `,` after string literal
  --> tests/ui/string_arguments.rs:10:34
   |
10 | js_bindgen::unsafe_embed_asm!("" 42);
   |                                  ^^

error: requires at least a string argument
  --> tests/ui/string_arguments.rs:13:31
   |
13 | js_bindgen::unsafe_embed_asm!(.);
   |                               ^

error: expected `#[...]`
  --> tests/ui/string_arguments.rs:16:31
   |
16 | js_bindgen::unsafe_embed_asm!(#);
   |                               ^

error: expected `#[...]`
  --> tests/ui/string_arguments.rs:19:31
   |
19 | js_bindgen::unsafe_embed_asm!(#foo);
   |                               ^^^^

error: expected `#[...]`
  --> tests/ui/string_arguments.rs:22:31
   |
22 | js_bindgen::unsafe_embed_asm!(#());
   |                               ^^^

error: expected `cfg`
  --> tests/ui/string_arguments.rs:25:33
   |
25 | js_bindgen::unsafe_embed_asm!(#[foo]);
   |                                 ^^^

error: multiple `cfg`s in a row not supported
  --> tests/ui/string_arguments.rs:29:2
   |
29 | /     #[cfg()]
30 | |     #[cfg()]
   | |____________^

error: requires at least a string argument
  --> tests/ui/string_arguments.rs:35:1
   |
35 | js_bindgen::unsafe_embed_asm!(#[cfg()]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `js_bindgen::unsafe_embed_asm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: no corresponding closing bracers found
  --> tests/ui/string_arguments.rs:38:31
   |
38 | js_bindgen::unsafe_embed_asm!("{}}");
   |                               ^^^^^

error: expected `interpolate`
  --> tests/ui/string_arguments.rs:41:37
   |
41 | js_bindgen::unsafe_embed_asm!("{}", foo);
   |                                     ^^^

error: expected a value
  --> tests/ui/string_arguments.rs:44:37
   |
44 | js_bindgen::unsafe_embed_asm!("{}", interpolate);
   |                                     ^^^^^^^^^^^

error: expected `*const`
  --> tests/ui/string_arguments.rs:47:49
   |
47 | js_bindgen::unsafe_embed_asm!("{}", interpolate *mut);
   |                                                 ^^^^

error: expected a value
  --> tests/ui/string_arguments.rs:50:49
   |
50 | js_bindgen::unsafe_embed_asm!("{}", interpolate #);
   |                                                 ^

error: type not completed, missing `>`
  --> tests/ui/string_arguments.rs:53:49
   |
53 | js_bindgen::unsafe_embed_asm!("{}", interpolate < Foo);
   |                                                 ^^^^^

error: expected a value
  --> tests/ui/string_arguments.rs:56:48
   |
56 | js_bindgen::unsafe_embed_asm!("{}", interpolate,);
   |                                                ^

error: expected a `,` between formatting parameters
  --> tests/ui/string_arguments.rs:59:53
   |
59 | js_bindgen::unsafe_embed_asm!("{}", interpolate Foo &);
   |                                                     ^

error: expected an argument for `{}`
  --> tests/ui/string_arguments.rs:62:38
   |
62 | js_bindgen::unsafe_embed_asm!("foo", "{}");
   |                                      ^^^^

error: expected an argument for `{}`
  --> tests/ui/string_arguments.rs:65:68
   |
65 | js_bindgen::unsafe_embed_asm!("foo", "{}", "{}", interpolate "test",);
   |                                                                    ^

error: no corresponding closing bracers found
  --> tests/ui/string_arguments.rs:68:38
   |
68 | js_bindgen::unsafe_embed_asm!("foo", "{a");
   |                                      ^^^^

error: no corresponding opening bracers found
  --> tests/ui/string_arguments.rs:71:38
   |
71 | js_bindgen::unsafe_embed_asm!("foo", "a}");
   |                                      ^^^^

error: expected no tokens after string literals and formatting parameters
  --> tests/ui/string_arguments.rs:74:35
   |
74 | js_bindgen::unsafe_embed_asm!("", 42);
   |                                   ^^

error: aborting due to 24 previous errors

